# rusty-graph

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
patches/: tree-sitter-kotlin-optional-class-member-semi.patch
scripts/: regenerate-kotlin-grammar.sh
scripts/history/: rebuild.py
scripts/history/readmes/: 01-scaffold.md  05-mcp.md  09-final.md
src/: arch.rs  cli.rs  cochange.rs  config.rs  context.rs  embed.rs  export.rs  fuzzy.rs  gitdiff.rs  graph.rs  indexer.rs  lsp.rs  main.rs  serve.rs  sync.rs  term.rs  testmap.rs  types.rs
src/db/: mod.rs
src/extract/: cfamily.rs  common.rs  csharp.rs  dart.rs  go.rs  hints.rs  java.rs  javascript.rs  kotlin.rs  lisp.rs  mod.rs  php.rs  python.rs  routes.rs  ruby.rs  rust.rs  swift.rs  webcomponent.rs
src/mcp/: mod.rs
