[package]
name = "rusty-graph"
version = "0.1.0"
edition = "2021"
description = "Local code knowledge graph for AI coding agents"
license = "MIT"

[[bin]]
name = "rusty-graph"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
