[package]
name = "rusty-graph"
version = "0.1.0"
edition = "2021"
description = "Local code knowledge graph for AI coding agents"
license = "MIT"

[[bin]]
name = "rusty-graph"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }


tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
ignore = "0.4"
blake3 = "1"
rayon = "1"

notify-debouncer-mini = { version = "0.7", features = [] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
