[package]
name = "rusty-graph"
version = "0.1.0"
edition = "2021"
description = "Local code knowledge graph for AI coding agents"
license = "MIT"

[[bin]]
name = "rusty-graph"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }


tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
ignore = "0.4"
blake3 = "1"
rayon = "1"

notify-debouncer-mini = { version = "0.7", features = [] }


tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-elisp = "1"
tree-sitter-commonlisp = "0.4"
tree-sitter-scheme = "0.24"


tree-sitter-ruby = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-php = "0.24"
tree-sitter-swift = "0.7"
tree-sitter-kotlin-ng = { path = "vendor/tree-sitter-kotlin-ng" }
tree-sitter-dart = "0.2"


lisp-sitter-core = { path = "../lisp-sitter/crates/lisp-sitter-core" }
lisp-sitter-elisp = { path = "../lisp-sitter/crates/lisp-sitter-elisp" }
lisp-sitter-cl = { path = "../lisp-sitter/crates/lisp-sitter-cl" }
lisp-sitter-scheme = { path = "../lisp-sitter/crates/lisp-sitter-scheme" }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
